--- a/src/App/List/List.css
+++ b/src/App/List/List.css
@@ -24,6 +24,14 @@
   border-bottom: 1px solid #a9a9a9;
   padding: 4px 12px;
 }
+.categories li a {
+  color: black;
+  text-decoration: none;
+}
+.categories li a:hover,
+.categories li a:focus {
+  text-decoration: underline;
+}
 
 .todos {
   list-style: none;
