--- a/src/App/List/List.css
+++ b/src/App/List/List.css
@@ -9,7 +9,16 @@
   background: none;
   border: 1px solid #a9a9a9;
   padding: 4px 12px;
+  margin: 0px;
   margin-right: 8px;
+  box-sizing: border-box;
+  line-height: 1rem;
+  font-size: 0.8rem;
+  color: #000000;
+}
+.manage-list-buttons a.button {
+  display: inline-block;
+  text-decoration: none;
 }
 
 .manage-list-buttons .button:last-child {
