--- a/src/App/List/List.css
+++ b/src/App/List/List.css
@@ -9,6 +9,7 @@
   background: none;
   border: 1px solid #a9a9a9;
   padding: 4px 12px;
+  padding-bottom: 6px;
   margin: 0px;
   margin-right: 8px;
   box-sizing: border-box;
