--- a/src/App/View/View.css
+++ b/src/App/View/View.css
@@ -28,3 +28,23 @@
   font-size: 14px;
   font-style: italic;
 }
+.manage-view-buttons .button {
+  background: none;
+  border: 1px solid #a9a9a9;
+  padding: 4px 12px;
+  padding-bottom: 6px;
+  margin: 0px;
+  margin-right: 8px;
+  box-sizing: border-box;
+  line-height: 1rem;
+  font-size: 0.8rem;
+  color: #000000;
+}
+.manage-view-buttons a.button {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.manage-view-buttons .button:last-child {
+  margin-right: 0px;
+}
