implemented view todo

--- a/src/App/View/View.css
+++ b/src/App/View/View.css
@@ -48,3 +48,10 @@
 .manage-view-buttons .button:last-child {
   margin-right: 0px;
 }
+
+.todo p.expired {
+  color: red;
+}
+.todo p.not-expired {
+  color: green;
+}
