--- a/src/App/List/Categories/Categories.css
+++ b/src/App/List/Categories/Categories.css
@@ -9,3 +9,22 @@
   border-bottom: 1px solid #a9a9a9;
   padding: 4px 12px;
 }
+
+.categories .category .category-block {
+  display: flex;
+  justify-content: space-between;
+}
+
+.categories li button.btn-link {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border: 0px;
+  background: none;
+  font-size: 16px;
+  outline: none;
+}
+
+.categories li button.btn-link:hover,
+.categories li button.btn-link:focus {
+  text-decoration: underline;
+  cursor: pointer;
+}
